package design.patten.bridge;

/**
 * desc : 实现化角色接口
 * Created by tiantian on 2018/10/8
 */
public interface Implementor {
    void actionImpl();
}
